--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: megusta
+email: d u a r t e _ e l i a n a at hotmail . com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The goal of this page is to post recipes I find delicious and useful to
+  be on a healthy diet.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://emduart2.github.io/megusta" # the base hostname & protocol for your site
+twitter_username: notwitter
+github_username:  emduart2
 
 # Build settings
 markdown: kramdown
